[project]
name = "waves-on-map"
version = "0.1.0"
description = "wave data shown on map"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "folium>=0.19.4",
    "matplotlib>=3.10.0",
    # "overpy>=0.7",
    "pydantic>=2.10.6",
    "python-fasthtml>=0.12.0",
    "pythonanywhere>=0.15.5",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sqlite-minutils>=4.0.3",
    "tomli>=2.2.1",
    "topojson>=1.10",
    "u>=1.0.4",
    "uvicorn>=0.34.0",
]
[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "waves_on_map"

[dependency-groups]
dev = [
    "pip-tools>=7.5.0",
]
